Fix whitespace in diff view.

--- a/app/webpacker/src/stylesheets/merge_requests.css.scss
+++ b/app/webpacker/src/stylesheets/merge_requests.css.scss
@@ -103,6 +103,7 @@ table.code-review {
 
   .code {
     font-family: monospace;
+    white-space: pre-wrap;
   }
 
   // Add comment button
